# concept-discovery

./: .replit  SQLAlchemyChartData.py  async_example.py  cleanup.sh  example.py  main.py  manage_tranlsations.py  medical_search_data.db  package-lock.json  package.json  pyproject.toml  replit.nix  run_dev.sh  run_prod.sh  workflow.py
athena_ohdsi_client/: __init__.py  api_client.py  async_api_client.py  models.py
frontend/: README.MD  README.md  extractor.py  index.html  output.md  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/public/locales/ar/: common.json  mainContainer.json
frontend/public/locales/de/: common.json  mainContainer.json
frontend/public/locales/en/: common.json  mainContainer.json
frontend/public/locales/es/: common.json  mainContainer.json
frontend/public/locales/eu/: common.json  mainContainer.json
frontend/public/locales/fr/: common.json  mainContainer.json
frontend/public/locales/hi/: common.json  mainContainer.json
frontend/public/locales/it/: common.json  (+1 more)
frontend/src/: App.tsx  i18n.ts  index.css
frontend/src/components/: ConceptTable.tsx  Dashboard.tsx  Disambiguation.tsx  Footer.tsx  ForcedLanguageSelector.tsx  Header.tsx  HelloWorld.tsx  LanguageSelector.tsx  LoadingComponent.tsx  MedicalConceptsTable.tsx  Recommendation.tsx  SearchBox.tsx  Stepper.tsx  SynonymList.tsx  Typewriter-effect.tsx  index.ts
frontend/src/hooks/: useMediaQuery.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: MainContainer.tsx
frontend/src/types/: index.ts
logdir/: ell.db
(+46 files in other folders)
